--- a/css/estiloSistema.css
+++ b/css/estiloSistema.css
@@ -13,7 +13,10 @@ and open the template in the editor.
     font-family: "geoSans";
     src: url(../fuentes/geo_sans_light/GeosansLight.ttf) format("truetype");
 }
-
+.bodyAcceso{
+    background-image: url(../imagenes/kindajean.png);
+    background-repeat: repeat;
+}
 .headerCentroGestion{
 	width: 1100px;
 	margin-top: 0px;
@@ -170,18 +173,19 @@ thead th {
 	margin-bottom: 10px;
 }
 
+
 .acceso{
-	margin: 0 auto;
+    margin: 100 auto;
     width: 300px;
     height: 200px;
     border: #C0C0C0 solid 4px;
-	background-color: #ccc;
+    background-color: #eee;
 }
 
 .formAcceso{
-	width:250px;
-	height: 130px;	
-	margin-left: 20px;
+	width:300px;
+	height: 200px;	
+/*	margin-left: 20px;*/
 }
 
 .cajasAcceso{ 
@@ -193,25 +197,35 @@ thead th {
    	clear: right;
 }
 .acceso h1{
-	margin-top: 0px;
-	text-align: center;
-	font-family: "geoSans";
-	font-weight: lighter;
-	text-transform: uppercase;
-	color: #333;
-	background-color: #F60;
+    margin-top: 0px;
+    text-align: center;
+    font-family: "geoSans";
+    font-weight: lighter;
+    text-transform: uppercase;
+    color: #333;
+    background-color: #F60;
 }
-
+.labels{
+    margin-left: 15px;
+    width: 80px; 
+    height: 100px; 
+    float: left;
+}
+.cajasBoton{
+    width: 180px; 
+    height: 100px;
+    float: left;
+}
 .labelAcceso{
     margin-top: 10px;
-	text-align: left;
-	font-family: "geoSans";
-	font-weight:bolder;
-	color: #333;
-	font-size: 16px;
-	margin-bottom: 16px;
-	float: left; 
-	clear: left;
+    text-align: left;
+    font-family: "geoSans";
+    font-weight:bolder;
+    color: #333;
+    font-size: 16px;
+    margin-bottom: 16px;
+    float: right; 
+    clear: right;
 }
 
 .usuario{
